
        # In 'creme_core.core.entity_filter.condition_handler' :
            - The attribute 'BaseCustomFieldConditionHandler._custom_field_id', has been replaced by '_custom_field_uuid'.
            - In the class 'RelationConditionHandler', these attributes have been replaced :
                - _entity_id => _entity_uuid
                - _ct_id => _ct_key
        # In the model 'creme_core.models.fields_config.FieldsConfig' :
            - The attributes "_excluded_fnames" & "_required_fnames" have been removed.
            - The method 'update_form_fields()' now takes a form instance, and can set the _meta attribute (backported to 2.5.6/2.4.13).
        # In the context created by the class-view 'creme_core.views.search.Search',
          "models" is now a list of CremeEntity classes (use "verbose_names" instead).
        # In the templatetag "{% search_form %}" (from library "creme_search")
            - The argument "user" has been removed.
            - A mandatory argument "models" has been added.
        # Apps :
            * Creme_config :
                - The value of class attribute "id" of several Brick classes (for bricks configuration) have changed (mainly "block" => "brick").
                - In the class 'registry._ConfigRegistry' :
                    - The attribute '_user_brick_ids' has been replaced by '_user_brick_classes'.
                    - The attribute '_portal_brick_ids' has been replaced by '_portal_brick_classes'.
                - In the class 'registry._AppConfigRegistry' :
                    - The attribute '_brick_ids' has been replaced by '_brick_classes'.
                    - The method '_register_bricks' now takes Brick classes.
                - The view 'views.portal.Portal' injects "bricks" (in the context) instead "app_bricks".
            * Mobile :
                - The templatetag "mobile_activity_card" does not inject "STATUS_IN_PROGRESS" in the context anymore.


== Version 2.5 ==

  UPGRADE NOTE :